<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <!-- cuadros de texto -->
    <EditText
        android:id="@+id/edId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/edId"/>

    <EditText
        android:id="@+id/edVariedad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:hint="@string/edVariable"/>

    <EditText
        android:id="@+id/edKilos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edKilos"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/edComentarios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edComentarios"
        android:inputType="textMultiLine"/>
    <!-- botones -->
    <Button
        android:id="@+id/btRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btregistrar"
        android:onClick="registrar"/>

    <Button
        android:id="@+id/btMostrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btbuscar"
        android:onClick="buscar"/>

    <Button
        android:id="@+id/btActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btactualizar"
        android:onClick="update"/>

    <Button
        android:id="@+id/btBorrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btborrar"
        android:onClick="eliminar"/>


</LinearLayout>